tests/integration/snapshots/integration__conformance__n_number_1.0e.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[1.0e]
stdout ---

stderr ---
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:6
  |
1 | [1.0e]
  |     -^
  |     |
  |     exponent found here
  |
help: remove the exponent
  |
1 - [1.0e]
1 + [1.0]
  |
help: insert a placeholder digit
  |
1 | [1.0e5]
  |      +
